--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         }
 
         .slider img {
-            height: 400px; /* Immagini ridotte */
+            height: 600px; /* Immagini alte 600px */
             display: block;
             margin: 0; /* Rimuovere il margine */
             padding: 0; /* Rimuovere il padding */
@@ -113,16 +113,17 @@
         @media (max-width: 768px) {
             .three-columns {
                 flex-direction: column; /* Colonne incolonnate su schermi mobili */
-                align-items: center;
+                align-items: flex-start; /* Allineare a sinistra su schermi mobili */
             }
 
             .three-columns div {
                 width: 100%; /* Larghezza completa su schermi mobili */
-                text-align: center;
+                text-align: left; /* Allineare il testo a sinistra */
+                margin-bottom: 10px; /* Spazio tra le righe */
             }
 
             .slider img {
-                height: 300px; /* Ancora più piccolo su schermi mobili */
+                height: 400px; /* Ancora più piccolo su schermi mobili */
             }
         }
     </style>
@@ -141,7 +142,6 @@
 
     <!-- Sezione 1 -->
     <section class="section">
-        <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -151,11 +151,11 @@
         <div class="image-text-container">
             <div class="slider">
                 <div class="slider-wrapper">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 1">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 2">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 3">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 4">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 5">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 1">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 2">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 3">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 4">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
                 </div>
             </div>
         </div>
@@ -168,11 +168,11 @@
         <div class="image-text-container">
             <div class="slider">
                 <div class="slider-wrapper">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 6">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 7">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 8">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 9">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 10">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 8">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 9">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 10">
                 </div>
             </div>
         </div>
@@ -180,7 +180,6 @@
 
     <!-- Sezione 2 -->
     <section class="section">
-        <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -190,11 +189,11 @@
         <div class="image-text-container">
             <div class="slider">
                 <div class="slider-wrapper">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 11">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 12">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 13">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 14">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 15">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 11">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 12">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 13">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 14">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 15">
                 </div>
             </div>
         </div>
@@ -207,11 +206,11 @@
         <div class="image-text-container">
             <div class="slider">
                 <div class="slider-wrapper">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 16">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 17">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 18">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 19">
-                    <img src="https://via.placeholder.com/1000x400" alt="Immagine 20">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 16">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 17">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 18">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 19">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 20">
                 </div>
             </div>
         </div>
