--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Helvetica', sans-serif; /* Cambiato il font in Helvetica */
+            font-family: 'Helvetica', sans-serif; /* Font Helvetica */
             color: #333;
             background-color: #fff;
             line-height: 1.6;
@@ -21,14 +21,14 @@
 
         /* Spazio extra sopra */
         .spazio-extra {
-            height: 60px;
+            height: 10px; /* Ridotto lo spazio sopra l'intestazione */
         }
 
         /* Barra in alto */
         .top-bar {
             display: flex;
             justify-content: space-between;
-            padding: 20px 10px;
+            padding: 5px 10px; /* Molto poco spazio sopra */
             border-bottom: 2px solid #000; /* Linea nera */
         }
 
@@ -36,6 +36,7 @@
             width: 30%;
             text-align: center;
             font-size: 0.7rem; /* Testo ridotto */
+            margin-bottom: 20px; /* Più spazio sotto */
         }
 
         /* Sezione principale */
@@ -46,18 +47,18 @@
 
         .divider {
             border-top: 2px solid #000; /* Linea nera */
-            margin: 20px 0;
+            margin: 40px 0 20px 0; /* Aggiunto più spazio sotto le sezioni */
         }
 
         .three-columns {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 20px;
+            margin-bottom: 10px; /* Ridotto lo spazio sotto */
         }
 
         .three-columns div {
             width: 30%;
-            padding: 10px;
+            padding: 5px;
             box-sizing: border-box;
             font-size: 0.7rem; /* Testo ridotto */
         }
@@ -166,6 +167,8 @@
             </div>
         </div>
         <div class="divider"></div>
+
+        <!-- Sezione 2 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -182,10 +185,9 @@
                 </div>
             </div>
         </div>
-    </section>
+        <div class="divider"></div>
 
-    <!-- Sezione 2 -->
-    <section class="section">
+        <!-- Sezione 3 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -203,6 +205,8 @@
             </div>
         </div>
         <div class="divider"></div>
+
+        <!-- Sezione 4 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -219,6 +223,83 @@
                 </div>
             </div>
         </div>
+        <div class="divider"></div>
+
+        <!-- Sezione 5 -->
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 21">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 22">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 23">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 24">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 25">
+                </div>
+            </div>
+        </div>
+        <div class="divider"></div>
+
+        <!-- Sezione 6 -->
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 26">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 27">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 28">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 29">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 30">
+                </div>
+            </div>
+        </div>
+        <div class="divider"></div>
+
+        <!-- Sezione 7 -->
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 31">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 32">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 33">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 34">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 35">
+                </div>
+            </div>
+        </div>
+        <div class="divider"></div>
+
+        <!-- Sezione 8 -->
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 36">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 37">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 38">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 39">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 40">
+                </div>
+            </div>
+        </div>
+        <div class="divider"></div>
     </section>
 
     <!-- Archivio -->
