--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
             justify-content: space-between;
             padding: 5px 10px;
             border-bottom: 2px solid #000;
-            margin-bottom: 20px;
+            margin-bottom: 40px; /* Aggiunto più spazio sotto il testo dell'head */
         }
 
         .top-bar div {
             width: 30%;
             text-align: center;
             font-size: 0.7rem;
-            margin-bottom: 60px; /* Più spazio sotto il testo dell'head */
         }
 
         /* Sezione principale */
@@ -43,13 +42,13 @@
 
         .divider {
             border-top: 2px solid #000;
-            margin: 20px 0 60px 0; /* Più spazio sotto l'immagine prima della barra successiva */
+            margin: 20px 0 80px 0; /* Più spazio sotto l'immagine prima della barra successiva */
         }
 
         .three-columns {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 5px; /* Molto vicini alla barra superiore */
+            margin-bottom: 10px; /* Molto vicini alla barra superiore */
         }
 
         .three-columns div {
