--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             justify-content: space-between;
             padding: 5px 10px;
             border-bottom: 2px solid #000;
-            margin-bottom: 40px; /* Aggiunto più spazio sotto il testo dell'head */
+            margin-bottom: 50px; /* Più spazio sotto la head */
         }
 
         .top-bar div {
@@ -42,13 +42,13 @@
 
         .divider {
             border-top: 2px solid #000;
-            margin: 20px 0 80px 0; /* Più spazio sotto l'immagine prima della barra successiva */
+            margin: 20px 0 40px 0; /* Spazio più ampio sotto le immagini */
         }
 
         .three-columns {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 10px; /* Molto vicini alla barra superiore */
+            margin-bottom: 10px; /* Molto vicino alla barra */
         }
 
         .three-columns div {
@@ -156,6 +156,8 @@
 
     <!-- SEZIONE 1 -->
     <section class="section">
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -170,8 +172,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div> <!-- Spazio prima della prossima barra -->
         <!-- SEZIONE 2 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -187,8 +189,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div>
         <!-- SEZIONE 3 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -204,8 +206,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div>
         <!-- SEZIONE 4 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -221,8 +223,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div>
         <!-- SEZIONE 5 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -238,8 +240,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div>
         <!-- SEZIONE 6 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -255,11 +257,11 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div>
         <!-- SEZIONE 7 -->
         <div class="three-columns">
-            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
@@ -272,8 +274,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div>
         <!-- SEZIONE 8 -->
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
@@ -289,8 +291,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
 
+        <div class="divider"></div>
     </section>
 
     <!-- Archivio -->
