--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             justify-content: space-between;
             padding: 5px 10px;
             border-bottom: 2px solid #000;
-            margin-bottom: 50px; /* Più spazio sotto la head */
+            margin-bottom: 40px; /* Spazio sotto il testo head */
         }
 
         .top-bar div {
@@ -37,18 +37,17 @@
         /* Sezione principale */
         .section {
             padding: 0;
-            text-align: center;
         }
 
         .divider {
             border-top: 2px solid #000;
-            margin: 20px 0 40px 0; /* Spazio più ampio sotto le immagini */
+            margin: 20px 0; /* Spazio ampio prima della barra successiva */
         }
 
         .three-columns {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 10px; /* Molto vicino alla barra */
+            margin-bottom: 10px; /* Testo molto vicino alla barra */
         }
 
         .three-columns div {
@@ -156,6 +155,11 @@
 
     <!-- SEZIONE 1 -->
     <section class="section">
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <div class="divider"></div> <!-- Barra separatrice -->
 
         <div class="three-columns">
@@ -173,8 +177,15 @@
             </div>
         </div>
 
-        <div class="divider"></div> <!-- Spazio prima della prossima barra -->
+        <div class="divider"></div> <!-- Spazio ampio prima della prossima barra -->
         <!-- SEZIONE 2 -->
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -192,6 +203,13 @@
 
         <div class="divider"></div>
         <!-- SEZIONE 3 -->
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -209,6 +227,13 @@
 
         <div class="divider"></div>
         <!-- SEZIONE 4 -->
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -226,6 +251,13 @@
 
         <div class="divider"></div>
         <!-- SEZIONE 5 -->
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -243,6 +275,13 @@
 
         <div class="divider"></div>
         <!-- SEZIONE 6 -->
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
@@ -260,8 +299,15 @@
 
         <div class="divider"></div>
         <!-- SEZIONE 7 -->
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
-            <div>Lorem ipsum dolor sit amet.</div
+            <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
         </div>
@@ -277,6 +323,13 @@
 
         <div class="divider"></div>
         <!-- SEZIONE 8 -->
+        <div class="top-bar">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="divider"></div> <!-- Barra separatrice -->
+
         <div class="three-columns">
             <div>Lorem ipsum dolor sit amet.</div>
             <div>Lorem ipsum dolor sit amet.</div>
